# MBIR-TEM

./: .gitignore  .gitlab-ci.yml  .hgignore  .spyderworkspace  2D_hom_Disc.txt  2D_hom_Slab.txt  2D_hom_Test2.txt  ATHLETICS Test.txt  DataLoaderRealSpace.py  HasCuda  LICENSE  Python(x,y).lnk  README.md  charge_phase_ref.hdf5  desktop.ini  environment.yml  install instructions.txt  jacobi.npy  main.py  output.txt  pip_requirements.txt  requirements.txt  sdata.hdf5  setup.cfg  setup.py
Igor/: ATHLETICS_1.1.pxp  ATHLETICS_1.1_without_padding.pxp  Analysis #1.pxp  Analysis #2.pxp  Tour # 1 a.pxp  Tour # 1 b.pxp  Tour # 1 c.pxp  Tour # 1 d.pxp  Tour # 1 e.pxp
Igor/Igor Shared Procedures/: Append Residuals.ipf
PYRAMID/: desktop.ini
Python/: .spyderworkspace  2D_hom_Alternating_Filaments.txt  2D_hom_Filament.txt  AnalyticSolutionRealDisc.py  AnalyticSolutionRealSpaceSlab.py  AnalyticSolutionRealSphere.py  DataLoaderRealSpace.py  main.py  output.txt
Python/MagneticPhaseImaging/: .spyderproject  2D_hom_Disc.txt  2D_hom_Filament.txt  2D_hom_Slab.txt  2D_hom_Test1.txt  AnalyticSolutionRealSpace.py  DataLoader.py  DataLoaderFourierSpace.py  DataLoaderLLG.py  DataLoaderRealSpace.py  LLGFileCreator.py  LLGFileCreator2D.py  LLGFileCreator2DDisc.py  LLGFileCreator2DFilament.py  LLGFileCreator2DSlab.py  LLGFileCreator2DTest1.py  LLGFileCreator2DTest2.py  display_phase_map.py  main.py  phase_map_fourier.py  phasemap.py
SCons/: SConstruct  SConstructCython
demos/: Pyramid Notebook Example.ipynb  phasemap.hdf5
doc/: conf.py  index.rst  make.bat
docs/: Makefile  conf.py  index.rst  make.bat  pyramid.numcore.rst  pyramid.rst
mbir/: alignment.py  diagnostics.py  reconstruction.py  util.py
pyramid/: .spyderproject  __init__.py  _version.py  analytic.py  api.py  colormap.py  colors.py  config.py  converter.py  costfunction.py  datacollection.py  dataloader.py  dataset.py  diagnostics.py  fft.py  fieldconverter.py  fielddata.py  forwardmodel.py  holoimage.py  kernel.py  kernelcharge.py  logging.ini  magcreator.py  magdata.py  optimizer.py  phasemap.py  phasemapper.py  plottools.py  projection.py  projector.py  quaternion.py  ramp.py  reconstruction.py  reconstructor.py  regularisator.py  scalebars.py  script.py  semper.py  shapes.py  template.x3d  (+2 more)
pyramid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyramidas/: alignment.py  diagnostics.py  reconstruction.py  simulation.py  util.py
regrid/: array.cpp  array.hpp  gloripex.hpp  numpy.hpp  regrid.cc  test.py
scripts/: AnalyticSolutionRealSpaceSlab.py  abstract_pictures.py  compare_discs.py  compare_method_errors.py  compare_method_errors_fourier_padding.py  compare_method_errors_res.py  compare_methods.py  compare_pixel_fields.py  compare_vortices.py  create_alternating_filaments.py  create_logo.py  create_multiple_samples.py  create_random_distribution.py  create_random_pixels.py  create_random_slabs.py  create_sample.py  create_vortex.py  cython_example.py  edinburgh_test.py  get_jacobi.py  get_jacobi_projection.py  get_revision.py  gui_create_logo.py  images_poster.py  interactive_setup.py  invert2.py  kernel.py  kernel_comparison.py  main.py  reconstruct_random_pixels.py  reconstruct_test.py  robert_filter.py  simple_phasemapping.py  simple_reconstruction.py  test.py  test_arb_projection.py  test_h5py.py  test_logging.py  test_logging_sub.py  test_methods.py  (+5 more)
test/: __init__.py  run_tests.py  test_compliance.py  test_dataloader.py  test_magdata.py  test_phasemap.py
tests/: test_analytic.py  test_compliance.py  test_costfunction.py  test_dataset.py  test_fielddata.py  test_forwardmodel.py  test_holoimage.py  test_kernel.py  test_magcreator.py  test_magdata.py  test_optimize.py  test_phasemap.py  test_phasemapper.py  test_projector.py  test_reconstruction.py  test_reconstructor.py  test_regularisator.py  test_simulated_reconstruction.py
(+444 files in other folders)
