# -*- coding: utf-8 -*-
#
#    mslib.setup
#    ~~~~~~~~~~~
#
#    setup.cfg
#
#    This file is part of mss.
#
#    :copyright: Copyright 2016-2017 Reimar Bauer, Joern Ungermann
#    :copyright: Copyright 2016-2017 by the mss team, see AUTHORS.
#    :license: APACHE-2.0, see LICENSE for details.
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in com#pliance with the License.
#    You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.


# CONFIGURATION FOR SETUP.PY:

[metadata]
name = pyramid
version = 0.1.0.dev0
author = Jan Caron
author-email = j.caron@fz-juelich.de
description = PYthon based Reconstruction Algorithm for MagnetIc Distributions
long-description = file: README.md
url = https://jugit.fz-juelich.de/j.caron/pyramid
license = GPLv3
classifiers =
    Development Status :: 3 - alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Operating System :: OS Independen

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
# TODO: Check (Comment out everything and test what's really needed)!
setup_requires =
    setuptools
    numpy>=1.6
    pytest
    pytest-runner
# TODO: Check!
tests_require =
    coverage
    pytest
    pytest-cov
    pytest-flake8
    pytest-runner
# TODO: Check!
install_requires =
    numpy>=1.6
    tqdm
    scipy
    matplotlib
    Pillow
 #   jutil  # TODO: How to handle this??? Ask Jörn!

[options.extras_require]
# TODO: necessary? Does it work with pip/conda?
3Dplot =
    qt==4.8
    mayavi==4.5
# TODO: Pillow and such?
io =
    hyperspy
fftw =
    pyfftw
# TODO: Notebooks and stuff
# demos =
# TODO: Add? How?
# snippets =
# TODO: make this optional? Or silent fallback to matplotlib? stylesheet?
colors =
    cmocean
# TODO: Don't use too many!
# TODO: What about jupyter notebooks?
# TODO: Check all submodules if anything should be optional or is missing?
# TODO: in general, make CI test THESE requirements (maybe in addition to the environment.yml)
# TODO: more for mayavi (plotting in general) and hyperspy, etc (see below)...
# TODO: what about demos? see Hyperspy?


# CONFIGURATION FOR TESTING:

[aliases]
test=pytest

[coverage:run]
branch = True
source = pyramid
omit =
    tests/*

[tool:pytest]  # TODO: Check if everything is taylored to pyramid!
#addopts = --cov --flake8  # TODO: delete?
flake8-max-line-length = 120
flake8-ignore =
    #ALL  # TODO: PEP8 deactivated by this line (remove at a later point)!
    E402  # module import not at top of file
    E124  # closing bracket does not match visual indentation
    E125  # continuation line with same indent as next logical line
    E226  # missing whitespace around arithmetic operator
    W503  # line break before binary operator
    W504  # line break after binary operator
    E741  # do not use variables named ‘l’, ‘O’, or ‘I’
    pyramid/__init__.py F401  # module imported but unused
    pyramid/__init__.py F403  # 'from module import *' used; unable to detect undefined names
    pyramid/__init__.py F405  # Name may be undefined, or defined from star imports: module
    pyramid/magcreator/__init__.py F401,F403,F405  # same as above
    #doc/conf.py ALL  # TODO: delete?
